--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-cloudantplus",
-  "version": "2.0.5-tpg",
-  "description": "A Node-RED node to access Cloudant and couchdb databases, supports views, query and bulk operations.",
+  "version": "2.0.5",
+  "description": "TPG fork: A Node-RED node to access Cloudant and couchdb databases, supports views, query and bulk operations.",
   "engines": {
     "node": ">=12.0.0"
   },
